--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.12.2",
         "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.30",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-permission": "^6.12",
-        "spatie/laravel-translatable": "^6.10"
+        "spatie/laravel-permission": "^6.15",
+        "spatie/laravel-translatable": "^6.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
