update nginx configuration to support HTTPS and serve React frontend alongside Laravel API

--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -1,22 +1,55 @@
+# Redirect all HTTP to HTTPS
 server {
     listen 80;
-    index index.php index.html;
+    server_name  _;   # or your domain
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name  _;   # or your domain(s)
+
+    #–– SSL from host’s Let’s Encrypt
+    ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    include             /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
+
+    #── React frontend ──
+    root   /var/www/frontend;
+    index  index.html;
+
+    # static assets (optional; if your build splits into /static/)
+    location /static/ {
+      alias /var/www/frontend/static/;
+      access_log off;
+      expires 30d;
+    }
+
+    # All other “site” requests → React’s index.html
+    location / {
+      try_files $uri /index.html;
+    }
+
+    #── Laravel API ──
+    # Any path starting /api/ → Laravel public
+    location ^~ /api/ {
+      root   /var/www/public;
+      try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Pass PHP scripts to FPM (for both /api and any other .php you might need)
+    location ~ \.php$ {
+        root           /var/www/public;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass         app:9000;          # your PHP‑FPM service
+        fastcgi_index        index.php;
+        include              fastcgi_params;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param  PATH_INFO        $fastcgi_path_info;
+    }
+
+    gzip on;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/public;
-    
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-    
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
 }
