--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -1,17 +1,17 @@
 # Redirect all HTTP to HTTPS
 server {
     listen 80;
-    server_name  _;   # or your domain
+    server_name  alumni.sanzhar.tech;   # or your domain
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name  _;   # or your domain(s)
+    server_name  alumni.sanzhar.tech;   # or your domain(s)
 
     #–– SSL from host’s Let’s Encrypt
-    ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/alumni.sanzhar.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alumni.sanzhar.tech/privkey.pem;
     include             /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
 
