--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -6,8 +6,7 @@ server {
 }
 
 server {
-    listen 443 ssl;
-    http2;
+    listen 443 ssl http2;
     server_name  alumni.sanzhar.tech;   # or your domain(s)
 
     #–– SSL from host’s Let’s Encrypt
