--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/horizon": "^5.30",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.6",
         "spatie/laravel-permission": "^6.15",
         "spatie/laravel-translatable": "^6.11"
     },
