--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,8 @@ services:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
+    ports:
+      - "8080:8080"
     volumes:
       - ./:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
