--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "dedoc/scramble": "^0.12.10",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
+        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
