--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -26,7 +26,7 @@ server {
       expires 30d;
     }
 
-    # All other “site” requests → React’s index.html
+    # All other "site" requests → React's index.html
     location / {
       try_files $uri /index.html;
     }
@@ -36,6 +36,19 @@ server {
     location ^~ /api/ {
       root   /var/www/public;
       try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    #── WebSocket Support ──
+    location /app/ {
+      proxy_pass http://app:8081;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_read_timeout 86400; # 24 hours
     }
 
     # Pass PHP scripts to FPM (for both /api and any other .php you might need)
