--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -51,6 +51,18 @@ server {
       proxy_read_timeout 86400; # 24 hours
     }
 
+    #── Reverb/Pusher Broadcast HTTP POST Endpoint (/apps/...) ──
+    # Handles POST requests from Laravel backend broadcaster
+    location /apps/ {
+        proxy_pass http://app:8081; # Proxy HTTP POSTs to Reverb on 8081
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # DO NOT include Upgrade/Connection headers here
+    }
+
     # Pass PHP scripts to FPM (for both /api and any other .php you might need)
     location ~ \.php$ {
         root           /var/www/public;
